syntax = "proto3";

service Auth {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Check (CheckRequest) returns (CheckResponse);
    rpc GetUser (GetUserRequest) returns (User);
    rpc GetAllUser (GetAllUserRequest) returns (stream User);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string token = 2;
}

message CheckRequest {
    string token = 1 ;
}

message CheckResponse {
    bool valid = 1;
    string username = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
    string token = 2;
}

message GetUserRequest {
    string username = 1;
}

message GetAllUserRequest {
    bool isAdmin = 1;
}

message User {
    string username = 1;
    string passwordHash = 2;
    bool isAdmin = 3;
}