syntax = "proto3";

service Sync {
    rpc Write (stream WriteRequest) returns (WriteResponse);
    rpc GetDifference (GetDifferenceRequest) returns (GetDifferenceResponse);
    rpc Read (ReadRequest) returns (stream ReadResponse);
    rpc CheckExist (CheckRequest) returns (CheckResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc Restore (RestoreRequest) returns (RestoreResponse);
}

message WriteRequest {
    int64 count = 1;
    string author = 2;
    string message = 3;
    string table = 4;
    bool deleted = 5;
}

message WriteResponse {
    bool success = 1;
}

message ReadRequest {
    int64 first = 1;
    int64 last = 2;
    string table = 3;
}

message ReadResponse {
    int64 count = 1;
    string author = 2;
    string message = 3;
    bool deleted = 4;
}

message GetDifferenceRequest {
    int64 local = 1;
    string table = 2;
}

message GetDifferenceResponse {
    int64 difference = 1;
}

message CheckRequest {
    string table1 = 1;
    string table2 = 2;
}

message CheckResponse {
    string table = 1;
}

message DeleteRequest {
    int64 count = 1;
    string table = 4;
}

message DeleteResponse {
    bool success = 1;
}

message RestoreRequest {
    int64 count = 1;
    string table = 4;
}

message RestoreResponse {
    bool success = 1;
}